# DearDiary

./: CMakeLists.txt
code/: CMakeLists.txt
code/inc/: DataStorage.hpp  Terminator.hpp  Utilities.hpp  structures.hpp
code/src/: DataStorage.cpp  Diarrhea.cpp  Utilities.cpp
res/: canvas.xcf
src/: CMakeLists.txt
